--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ scala:
 jdk:
   - oraclejdk8
   - openjdk7
+script:
+  - sbt clean coverage test &&
+    sbt coverageAggregate
+after_success:
+  - sbt coveralls
