--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala:
   - 2.11.7
 jdk:
   - oraclejdk8
-  - openjdk7
+  - oraclejdk7
 script:
   - sbt clean coverage test &&
     sbt coverageAggregate
